<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/program_category">
        <Preference android:title="@string/program_title"
            android:key="get_updates"
            android:summary=""/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/homepage_category">

        <CheckBoxPreference
            android:key="filter_cat"
            android:title="@string/setting_category_title"
            android:defaultValue="false"/>

        <ListPreference
            android:key="pref_cat"
            android:entries="@array/category_strings"
            android:entryValues="@array/category_ids_strings"
            android:defaultValue="15"
            android:dependency="filter_cat"
            android:title="@string/setting_category_info"/>

        <CheckBoxPreference
            android:key="filter_loc"
            android:title="@string/setting_location_title"
            android:defaultValue="false"/>

        <ListPreference
            android:key="pref_loc"
            android:title="@string/setting_location_info"
            android:entries="@array/location_strings"
            android:entryValues="@array/location_ids_strings"
            android:dependency="filter_loc"
            android:defaultValue="230" />

        <ListPreference
            android:key="pref_front_limit"
            android:title="@string/setting_front_limit"
            android:summary="@string/setting_front_limit_info"
            android:entries="@array/front_limit_numbers"
            android:entryValues="@array/front_limit_numbers"
            android:defaultValue="40" />

        <CheckBoxPreference
            android:key="pref_front_ongoing"
            android:title="@string/setting_front_ongoing"
            android:summary="@string/setting_front_ongoing_info"
            android:defaultValue="false" />

        <!--<CheckBoxPreference
            android:key="pref_load_images"
            android:title="@string/setting_load_images"
            android:summary="@string/setting_load_images_info"
            android:defaultValue="true" />-->

    </PreferenceCategory>

    <!--<PreferenceCategory
        android:title="@string/share_category">
        <EditTextPreference android:title="@string/share_message_title"
            android:key="share_message"
            android:defaultValue="@string/share_default"
            android:summary="@string/share_message_info"/>
    </PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/ga_category">

        <CheckBoxPreference
            android:key="send_ga"
            android:title="@string/setting_ga_title"
            android:summary="@string/setting_ga_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>