<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/global_background">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="@dimen/global_margin_vertical"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/big_title_height"
        android:background="@drawable/list_bar_states"
        android:id="@+id/day_change"
        android:layout_marginLeft="@dimen/global_margin_horizontal"
        android:layout_marginRight="@dimen/global_margin_horizontal">

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/big_title_height"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/global_margin_horizontal"
            android:layout_marginRight="@dimen/global_margin_horizontal"
            android:gravity="center"
            android:id="@+id/day_row"
            android:textColor="@color/global_textcolor"
            android:textSize="@dimen/big_title_text_size" />

        <ImageButton
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:contentDescription="@string/change_day"
            android:src="@drawable/list"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/day_row_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/global_margin_horizontal"
            android:layout_marginTop="7dp"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/global_background"
        android:visibility="visible"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:id="@+id/type_change"
        android:background="@drawable/list_bar_states"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/global_margin_horizontal"
        android:layout_marginRight="@dimen/global_margin_horizontal">

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/big_title_height"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/global_margin_horizontal"
            android:layout_marginRight="@dimen/global_margin_horizontal"
            android:id="@+id/type_row"
            android:gravity="center"
            android:textColor="@color/global_textcolor"
            android:textSize="@dimen/big_title_text_size" />

        <ImageButton
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:contentDescription="@string/change_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type_row_button"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="7dp"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:gravity="center"
        android:background="@color/list_background"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="@dimen/global_margin_horizontal"
        android:layout_marginRight="@dimen/global_margin_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:background="#ffffff"
        android:textColor="@color/global_textcolor"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="@dimen/global_margin_horizontal"
        android:layout_marginRight="@dimen/global_margin_horizontal"
        android:id="@+id/empty"
        android:textSize="@dimen/main_text_size"
        android:text="@string/no_search_results_facet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding">
    </TextView>

</LinearLayout>