<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/global_background">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/event_swipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:orientation="vertical"
            android:background="@color/main_text_background"
            android:layout_marginTop="@dimen/global_margin_vertical"
            android:layout_marginLeft="@dimen/global_margin_horizontal"
            android:layout_marginRight="@dimen/global_margin_horizontal">

            <!--<ImageView
                android:contentDescription="@string/image"
                android:id="@+id/event_image"
                android:paddingTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />-->

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/event_title"
                android:textStyle="italic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/event_detail"
                android:background="@color/white"
                android:gravity="center"
                android:textSize="@dimen/event_title_text_size"
                android:padding="@dimen/event_title_padding" />

            <View
                android:background="@drawable/divider"
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:visibility="visible"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:id="@+id/event_location"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/list_background"
                android:gravity="left"
                android:textColor="@color/global_textcolor"
                android:textSize="@dimen/main_text_size"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="7dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="@drawable/divider"
                android:visibility="visible"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="100dp"
                    android:textStyle="italic"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/date_period"
                    android:textColor="@color/red"
                    android:textSize="@dimen/main_text_size"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"/>

                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:id="@+id/event_date"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="80dp"
                    android:gravity="left"
                    android:textColor="@color/global_textcolor"
                    android:textSize="@dimen/main_text_size"
                    android:padding="@dimen/main_padding"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="@drawable/divider"
                android:visibility="visible"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/list_background"
                android:orientation="horizontal"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp">

                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="100dp"
                    android:textStyle="italic"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:text="@string/event_price"
                    android:textColor="@color/red"
                    android:textSize="@dimen/main_text_size"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>

                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:id="@+id/event_price"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:textColor="@color/global_textcolor"
                    android:textSize="@dimen/main_text_size"
                    android:padding="@dimen/main_padding"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="@drawable/divider"
                android:visibility="visible"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="italic"
                    android:layout_marginRight="10dp"
                    android:text="@string/category"
                    android:textColor="@color/red"
                    android:textSize="@dimen/main_text_size"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"/>

                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:id="@+id/event_category"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="80dp"
                    android:gravity="left"
                    android:textColor="@color/global_textcolor"
                    android:textSize="@dimen/main_text_size"
                    android:padding="@dimen/main_padding"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:background="@drawable/divider"
                android:visibility="visible"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:id="@+id/event_description"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/global_textcolor"
                android:textSize="@dimen/main_text_size"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:textColor="@color/red"
                android:visibility="visible"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/main_text_background"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/global_margin_horizontal"
            android:layout_marginRight="@dimen/global_margin_horizontal"
            android:layout_marginBottom="5dp">

            <!--<ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:contentDescription="@string/view_on_map"
                android:layout_alignParentRight="true"
                android:src="@drawable/map_states"
                android:background="@color/detail_button_background"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="200dp"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="13dp"/>-->

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/info_online"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/external_link"
                android:layout_alignParentRight="true"
                android:src="@drawable/external_link_states"
                android:background="@color/detail_button_background"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="60dp"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"/>

            <!--<ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/share_message_title"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/share"
                android:layout_alignParentRight="true"
                android:src="@drawable/share_button_states"
                android:background="@color/detail_button_background"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="50dp"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="13dp"/>-->

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@color/detail_button_background"
                android:contentDescription="@string/add_or_remove_from_favorite"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/favorite"
                android:layout_alignParentRight="true"
                android:scaleType="center"
                android:adjustViewBounds="false"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="14dp"
                android:layout_marginRight="10dp"/>

         </RelativeLayout>

    </LinearLayout>

</ScrollView>